# FleetDB_MCP_Server

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  LINKEDIN_POST.md
examples/: claude_desktop_config.example.json  langgraph_client.py
sql/: init.sql
src/fleetdb_mcp/: __init__.py  audit.py  cli.py  config.py  db.py  proposals.py  seed.py  server.py  sql_safety.py
tests/: test_integration.py  test_proposals.py  test_sql_safety.py
